Fixed server clock day overflow handling. Added ajax call to store the viewport scale in the user session so it can be applied to the html before it is sent to the client to prevent flickering when the page is initially displayed. Added fancy pants background for the fleet view.

--- a/htdocs/designs/official/Rediscovery/game.css
+++ b/htdocs/designs/official/Rediscovery/game.css
@@ -321,8 +321,21 @@ table.stacktrace th {
 * Fleet info box
 */
 
-.fleetInfoContainer .infoboxcontent {
-    padding: 0.25rem !important;
+.fleetInfoContainer > .infoboxcontent {
+    position: relative;
+}
+
+.fleetInfoContainer > .infoboxcontent {
+    padding: 0.25rem!important;
+    background-image: none!important;
+}
+
+.fleetInfoContainer .fleetInfoBackground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .fleetInfoProgress {
